--- a/styles/globals.css
+++ b/styles/globals.css
@@ -75,7 +75,10 @@ p {
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
   line-height: 1.5;
-  font-size: 1rem;
+  font-size: 100%;
+  @media only screen and (max-width: 720px) {
+    font-size: 0.5rem;
+  }
 }
 
 .card-img-top {
@@ -93,7 +96,7 @@ card-body {
   font-family: "Roboto";
 }
 
-.TimerNumber {
+/* .TimerNumber {
   font-size: 7vw;
     color: white;
     @media screen and (min-width: 1080px) {
@@ -102,7 +105,7 @@ card-body {
            color: white;
         }
       }
-}
+} */
 
 .custom-container {
   display: flex !important;
@@ -173,7 +176,7 @@ card-body {
     position: relative;
 }
 
-.custom-tag {
+/* .custom-tag {
   background: #cccccc;
   border-radius: 50px !important;
   font-size: 12px !important;
@@ -182,7 +185,7 @@ card-body {
   padding: 4px 10px !important;
   text-transform: uppercase !important;
   cursor: pointer !important;
-}
+} */
 .tag-teal {
   background-color: #47bcd4;
 }
