--- a/styles/globals.css
+++ b/styles/globals.css
@@ -60,10 +60,41 @@
   align-items: center;
   justify-content: center;
 }
-p {
+
+p, li {
   justify-content: justify;
   text-align: justify;
-  font-size: 1rem;
+  font-size: 1.5rem;
+}
+
+@media (max-width: 720px) {
+  p, li {
+    justify-content: justify;
+    text-align: justify;
+    font-size: 1rem;
+  }
+}
+
+h2 {
+  font-size: 5.6rem !important;
+  text-align: center;
+}
+
+@media (max-width: 720px) {
+  h2 {
+    font-size: 2.8rem !important;
+  }
+}
+
+h3 {
+  font-size: 3rem !important;
+  text-align: center;
+}
+
+@media (max-width: 720px) {
+  h3 {
+    font-size: 2rem !important;
+  }
 }
 
 .hidden {
@@ -74,11 +105,6 @@ p {
 * {
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
-  line-height: 1.5;
-  font-size: 100%;
-  @media only screen and (max-width: 720px) {
-    font-size: 0.5rem;
-  }
 }
 
 .card-img-top {
