--- a/styles/globals.css
+++ b/styles/globals.css
@@ -164,6 +164,14 @@ card-body {
   align-items: center;
 }
 
+.custom-card .custom-tag {
+  cursor: default !important;
+}
+
+.custom-card .custom-tag:hover {
+  cursor: default !important;
+}
+
 .custom-card:hover {
   box-shadow: 0 10px 50px rgba(0, 0, 0, 0.2) !important;
 }
