Update various pages, components, data, and styles

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -39,7 +39,6 @@
 .headingMd {
   font-size: 1.2rem;
   line-height: 1.5;
-  
 }
 
 @media (max-width: 600px) {
@@ -119,14 +118,24 @@
   margin: 0;
 }
 .hometemp {
-  background: rgb(2,0,36);
-background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
-min-height: 100vh;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    180deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 35%,
+    rgba(0, 212, 255, 1) 100%
+  );
+  min-height: 100vh;
 }
 .hometemp2 {
-  background: rgb(2,0,36);
-background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
-min-height: 90vh;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    180deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 35%,
+    rgba(0, 212, 255, 1) 100%
+  );
+  min-height: 90vh;
 }
 
 .descriptive-p {
