--- a/styles/globals.css
+++ b/styles/globals.css
@@ -94,7 +94,6 @@ li {
 }
 
 @media (max-width: 720px) {
-
   p,
   li {
     justify-content: justify;
@@ -171,7 +170,9 @@ card-body {
   overflow: hidden !important;
   width: 300px !important;
   align-items: center;
-  transition: transform 0.3s ease, box-shadow 0.3s ease !important;
+  transition:
+    transform 0.3s ease,
+    box-shadow 0.3s ease !important;
 }
 
 .custom-card .custom-tag {
@@ -325,7 +326,9 @@ card-body {
   width: 22rem !important;
   height: 28rem !important;
   align-items: center;
-  transition: transform 0.3s ease, box-shadow 0.3s ease !important;
+  transition:
+    transform 0.3s ease,
+    box-shadow 0.3s ease !important;
 }
 
 .custom-section-card:hover {
